// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generation golden prompts > continue: prompt carries the partial assistant message as its tail 1`] = `
{
  "cacheDepth": undefined,
  "messages": [
    {
      "content": [
        {
          "text": "Write Goldie's next reply in a fictional chat between Goldie and User.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Goldie is a golden retriever scholar.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Erudite, warm",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "A library by the sea.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Hi",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Woof, hello.",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Woof. Shall we begin?",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Tell me about tides.",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reply one.",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "params": {},
}
`;

exports[`generation golden prompts > genraw: raw prompt reaches the backend with no pipeline assembly 1`] = `
{
  "cacheDepth": undefined,
  "messages": [
    {
      "content": [
        {
          "text": "UNIQUE_RAW_PROMPT",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "params": {},
}
`;

exports[`generation golden prompts > impersonate: prompt includes the impersonation instruction; no message is persisted 1`] = `
{
  "cacheDepth": undefined,
  "messages": [
    {
      "content": [
        {
          "text": "Write Goldie's next reply in a fictional chat between Goldie and User.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Goldie is a golden retriever scholar.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Erudite, warm",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "A library by the sea.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Hi",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Woof, hello.",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Woof. Shall we begin?",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "[Write your next reply from the point of view of User, using the chat history so far as a guideline for the writing style of User. Don't write as Goldie or system. Don't describe actions of Goldie.]",
          "type": "text",
        },
      ],
      "role": "system",
    },
  ],
  "params": {},
}
`;

exports[`generation golden prompts > regenerate: prompt is rebuilt from the same history as the original send 1`] = `
{
  "cacheDepth": undefined,
  "messages": [
    {
      "content": [
        {
          "text": "Write Goldie's next reply in a fictional chat between Goldie and User.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Goldie is a golden retriever scholar.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Erudite, warm",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "A library by the sea.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Hi",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Woof, hello.",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Woof. Shall we begin?",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Tell me about tides.",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "params": {},
}
`;

exports[`generation golden prompts > send: full prompt assembly for a character card chat 1`] = `
{
  "cacheDepth": undefined,
  "messages": [
    {
      "content": [
        {
          "text": "Write Goldie's next reply in a fictional chat between Goldie and User.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Goldie is a golden retriever scholar.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Erudite, warm",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "A library by the sea.",
          "type": "text",
        },
      ],
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Hi",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Woof, hello.",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Woof. Shall we begin?",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Tell me about tides.",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "params": {},
}
`;
